gcc/testsuite/rust/rustc/ui/dyn-keyword/suggest-dyn-on-bare-trait-in-pat.rs
// { dg-additional-options "-frust-edition= 2021" }

trait Trait {}

impl dyn Trait {
    const CONST: () = ();
}

fn main() {
    match () {
        Trait::CONST => {}
// { dg-error ".E0782." "" { target *-*-* } .-1 }
    }
}

